--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-    margin: 0;
-    font-family: sans-serif;
-    background-color: #f8f9fa;
-  }
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #f8f9fa;
+}
   
